--- a/ansible/roles/zfs/templates/etc/systemd/system/zpool-scrub@.service.j2
+++ b/ansible/roles/zfs/templates/etc/systemd/system/zpool-scrub@.service.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 [Unit]
-Description=Scrub ZFS pool (aborting running scrubs)
+Description=Scrub %i (aborting running scrubs)
 Requires=zfs.target
 After=zfs.target
 
