--- a/ansible/roles/shavee/templates/zfs-shavee-unlock@.service.j2
+++ b/ansible/roles/shavee/templates/zfs-shavee-unlock@.service.j2
@@ -10,7 +10,7 @@ After=systemd-vconsole-setup.service
 Type=oneshot
 RemainAfterExit=yes
 TimeoutSec=300
-ExecStart=/bin/sh -c 'set -eu;keystatus="$$(/sbin/zfs get -H -o value keystatus "%I")";[ "$$keystatus" = "unavailable" ] || exit 0;count=0;while [ $$count -lt 3 ];do  systemd-ask-password --id="zfs:%I"    "Enter passphrase for %I"|    shavee {% if shavee_use_yubikey %}-y -s {{ shavee_yubikey_slot }}{% endif %} -z "%I" && exit 0;  count=$$((count + 1));done;exit 1'
+ExecStart=/bin/sh -c 'set -eu;keystatus="$$(/sbin/zfs get -H -o value keystatus "%I")";[ "$$keystatus" = "unavailable" ] || exit 0;count=0;while [ $$count -lt 3 ];do  systemd-ask-password --id="zfs:%I"    "Enter passphrase for %I"|    shavee {% if shavee_use_yubikey %}-y -s {{ shavee_yubikey_slot }}{% endif %} {% if shavee_recursive_mount %}-r{% endif %} -z "%I" && exit 0;  count=$$((count + 1));done;exit 1'
 ExecStop=/bin/sh -c 'set -eu;keystatus="$$(/sbin/zfs get -H -o value keystatus "%I")";[ "$$keystatus" = "available" ] || exit 0;/sbin/zfs unload-key "%I"'
 
 [Install]
